<resources>
    <string name="app_name">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="attention">Attention</string>
    <string name="okay">ok</string>
    <string name="filter">filter</string>
    <string name="all_store">all store</string>
    <string name="near_me">near me</string>
    <string name="cancel">cancel</string>
    <string name="apply">apply</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="discount_periode">Discount Period</string>
    <string name="description">Description</string>
    <string name="total_to_pay">Total to Pay</string>
    <string name="add_to_cart">Add to Chart</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="open_hour">open hour</string>
    <string name="address">address</string>
    <string name="close">close</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
</resources>