<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/size_16">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:background="@color/grey_dark"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="@dimen/size_10"/>

    <RadioGroup
        android:id="@+id/filter_rb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/size_10"
        app:layout_constraintTop_toBottomOf="@id/separator">

        <RadioButton
            android:id="@+id/all_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/all_store" />

        <RadioButton
            android:id="@+id/near_me_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/near_me" />

    </RadioGroup>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        app:layout_constraintTop_toBottomOf="@id/filter_rb">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="@dimen/size_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Space
            android:layout_width="@dimen/size_4"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/apply_btn"
            android:layout_width="@dimen/size_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>