<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ContentDescription"
    app:cardCornerRadius="@dimen/size_10"
    app:cardElevation="@dimen/size_10"
    android:layout_margin="@dimen/size_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/store_img"
            android:layout_width="@dimen/size_50"
            android:layout_height="@dimen/size_50"
            android:layout_margin="@dimen/size_16"
            tools:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/header_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/store_img"
            app:layout_constraintTop_toTopOf="@id/store_img"
            app:layout_constraintEnd_toStartOf="@id/navigate_btn"
            app:layout_constraintBottom_toBottomOf="@id/store_img"
            android:layout_margin="@dimen/size_16">

            <TextView
                android:id="@+id/store_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Title"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/store_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:textSize="12sp"
                tools:text="Title" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/navigate_btn"
            android:layout_width="@dimen/size_50"
            android:layout_height="@dimen/size_50"
            app:icon="@drawable/ic_baseline_directions_24"
            app:tint="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/header_container"
            app:layout_constraintBottom_toBottomOf="@id/header_container"
            android:layout_marginEnd="@dimen/size_16"
            style="@style/Theme.NearDeal.IconButton"/>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1"
            android:background="@color/grey_dark"
            android:layout_marginTop="@dimen/size_10"
            app:layout_constraintTop_toBottomOf="@id/store_img"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_16"
            app:layout_constraintTop_toBottomOf="@id/separator">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/open_hour"/>
                <Space
                    android:layout_width="@dimen/size_4"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/open_hour_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="23:12"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/description"/>
                <TextView
                    android:id="@+id/desc_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_4"
                    tools:text="@string/description"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address"/>
                <TextView
                    android:id="@+id/address_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_4"
                    tools:text="@string/address"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:text="@string/close" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>