<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailActivity"
    tools:ignore="ContentDescription, InefficientWeight">

    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/container_pay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_16"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/product_img"
                android:layout_width="@dimen/size_0"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@mipmap/ic_launcher" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/container_store"
                android:layout_width="@dimen/size_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_16"
                android:layout_marginTop="@dimen/size_200"
                android:layout_marginEnd="@dimen/size_16"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/store_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <Space
                    android:layout_width="@dimen/size_10"
                    android:layout_height="wrap_content" />

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_4"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/size_12">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:orientation="vertical"
                        android:padding="@dimen/size_16">

                        <TextView
                            android:id="@+id/store_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Store"
                            android:textStyle="bold"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/store_phone_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/size_4"
                            tools:text="021-893434"
                            android:textSize="12sp"
                            android:textStyle="bold"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_0"
                android:orientation="vertical"
                android:padding="@dimen/size_16"
                app:layout_constraintTop_toBottomOf="@id/container_store">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <Space
                        android:layout_width="@dimen/size_10"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/product_name_tv"
                        android:layout_width="@dimen/size_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        tools:text="Value" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_1"
                    android:background="@color/grey_dark"
                    android:layout_marginTop="@dimen/size_10"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/size_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/price"
                        android:textSize="12sp" />

                    <Space
                        android:layout_width="@dimen/size_10"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/price_tv"
                        android:layout_width="@dimen/size_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        tools:text="Rp 40.0000" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_1"
                    android:background="@color/grey_dark"
                    android:layout_marginTop="@dimen/size_10"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/size_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/discount"
                        android:textSize="12sp"/>

                    <Space
                        android:layout_width="@dimen/size_10"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/discount_tv"
                        android:layout_width="@dimen/size_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textColor="@color/red"
                        tools:text="- Rp 40.0000 (20%)" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_1"
                    android:background="@color/grey_dark"
                    android:layout_marginTop="@dimen/size_10"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/size_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/discount_periode"
                        android:textSize="12sp"/>

                    <Space
                        android:layout_width="@dimen/size_10"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/discount_period_tv"
                        android:layout_width="@dimen/size_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        tools:text="11 January 2021 - 12 January 2023" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_1"
                    android:background="@color/grey_dark"
                    android:layout_marginTop="@dimen/size_10"/>


                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_10"
                    android:text="@string/description"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/product_desc_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_4"
                    tools:text="Value" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_1"
                    android:background="@color/grey_dark"
                    android:layout_marginTop="@dimen/size_10"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/size_16"
        android:gravity="center">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/size_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_to_pay"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/to_pay_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/green"
                android:layout_marginTop="@dimen/size_4"
                tools:text="Rp 50.000" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Space
            android:layout_width="@dimen/size_10"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>